--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^1.1.0
   flutter_hooks: ^0.18.0
   image_picker: ^0.8.4+4
+  hex: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
