--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,15 @@ dependencies:
   lottie: ^1.1.0
   flutter_hooks: ^0.18.0
   image_picker: ^0.8.4+4
+  flutter_bloc: ^8.0.1
+
+  sliding_up_panel: ^2.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sizer: ^2.0.15
 
 
 dev_dependencies:
