added new bottom navigation bar (icons)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.0.1
 
   sliding_up_panel: ^2.0.0+1
+  widget_mask: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
