--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
+  introduction_screen: ^2.1.0
+  google_sign_in: ^5.2.3
 
 
 dev_dependencies:
