--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
   introduction_screen: ^2.1.0
-  google_sign_in: ^5.2.3
   intl: ^0.17.0
+
+  firebase_auth: ^3.3.9
+  google_sign_in: ^5.2.3
 
 
 dev_dependencies:
