--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.0.0
   lottie: ^1.1.0
   image_picker: ^0.8.4+4
+  cached_network_image: ^3.2.0
   syncfusion_flutter_datepicker: ^19.4.43
   flutter_bloc: ^8.0.1
 
