--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  animations: "^2.0.1"
+  animations: ^2.0.2
 #  provider: "^6.0.0"
 
   google_fonts: ^2.1.0
   flutter_svg: ^1.0.0
   lottie: ^1.1.0
   image_picker: ^0.8.4+4
-  cached_network_image: ^3.2.0
+#  cached_network_image: ^3.2.0
   syncfusion_flutter_datepicker: ^19.4.43
   flutter_bloc: ^8.0.1
 
@@ -49,7 +49,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
-  introduction_screen: ^2.1.0
+  introduction_screen: ^3.0.0
+  shared_preferences: ^2.0.13
   intl: ^0.17.0
 
   firebase_auth: ^3.3.9
