--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,13 @@ dependencies:
   firebase_auth: ^3.3.9
   google_sign_in: ^5.2.3
 
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  image_path: "assets/fotogo_launcher_icon.png"
+  android: true
+  ios: true
+
 
 dev_dependencies:
   flutter_test:
