--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,15 @@ dependencies:
   shared_preferences: ^2.0.13
   intl: ^0.17.0
 
-  firebase_auth: ^3.3.9
-  google_sign_in: ^5.2.3
+  firebase_auth: ^3.3.11
+  google_sign_in: ^5.2.4
 
   flutter_launcher_icons: "^0.9.2"
+  photo_gallery: ^1.1.1
+  transparent_image: ^2.0.0
+  permission_handler: ^9.2.0
+  photo_view: ^0.13.0
+
 
 flutter_icons:
   image_path: "assets/fotogo_launcher_icon.png"
