--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   photo_view: ^0.13.0
   exif: ^3.1.1
   package_info_plus: ^1.4.0
+  path_provider: ^2.0.9
+  path: ^1.8.0
+  flutter_switch: ^0.3.2
 
 
 dev_dependencies:
