--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  animations: ^2.0.2
+  animations: ^2.0.3
 #  provider: "^6.0.0"
 
-  google_fonts: ^2.1.0
-  flutter_svg: ^1.0.0
+  google_fonts: ^3.0.1
+  flutter_svg: ^1.1.0
   lottie: ^1.1.0
   image_picker: ^0.8.4+4
 #  cached_network_image: ^3.2.0
-  syncfusion_flutter_datepicker: ^19.4.43
+  syncfusion_flutter_datepicker: ^20.1.57
   flutter_bloc: ^8.0.1
 
   sliding_up_panel: ^2.0.0+1
@@ -58,14 +58,15 @@ dependencies:
   photo_gallery: ^1.1.1
   transparent_image: ^2.0.0
   permission_handler: ^9.2.0
-  photo_view: ^0.13.0
+  photo_view: ^0.14.0
   exif: ^3.1.1
   package_info_plus: ^1.4.0
   path_provider: ^2.0.9
-  path: ^1.8.0
+  path: ^1.8.1
   flutter_switch: ^0.3.2
   badges: ^2.0.2
   tab_indicator_styler: ^2.0.0
+  confetti: ^0.7.0
 
 
 dev_dependencies:
@@ -77,7 +78,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
