--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   tab_indicator_styler: ^2.0.0
   confetti: ^0.7.0
   fluttertoast: ^8.0.9
+  url_launcher: ^6.1.3
 
 
 dev_dependencies:
